--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -96,5 +96,44 @@
   <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
   <![endif]-->
+  
+  
+<div id="cse-search-results"></div>
+<script type="text/javascript">
+  var googleSearchIframeName = "cse-search-results";
+  var googleSearchFormName = "cse-search-box";
+  var googleSearchFrameWidth = 400;
+  var googleSearchDomain = "www.google.de";
+  var googleSearchPath = "/cse";
+</script>
+<script type="text/javascript" src="http://www.google.com/afsonline/show_afs_search.js"></script>
+  <!-- Search Google -->
+
+<center>
+
+<FORM method=GET action="http://www.google.de/search">
+
+<TABLE bgcolor="#FFFFFF"><tr><td>
+
+<A HREF="http://www.google.de">
+
+<IMG SRC="http://www.google.de/logos/Logo_40wht.gif" border="0"
+
+ALT="Google" align="absmiddle"></A>
+
+<INPUT TYPE=text name=q size=31 maxlength=255 value="">
+
+<INPUT TYPE=hidden name=hl value=de>
+
+<INPUT type=submit name=btnG VALUE="Google Search">
+
+</td></tr></TABLE>
+
+</FORM>
+
+</center>
+
+<!-- Search Google --> 
+
 </body>
 </html>
