Fixed some tests and now creating some non existing folder while uploading

--- a/application/views/scripts/document/page/list.phtml
+++ b/application/views/scripts/document/page/list.phtml
@@ -11,6 +11,7 @@ Document: <?php echo $this->document->getTitle(); ?>
   </tr>
   <?php 
   $i = 0;
+  //var_dump($this->document->getPages());
   foreach($this->document->getPages() as $page): 
     ?>
   <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
