--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -77,31 +77,36 @@ $defaultNamespace = new Zend_Session_Namespace('Default');
           </ul>
         </div>
       </header>
-      <div id="content">
-        <div id="sub-menu">
+      
+      <div id="content" class="clearfix">
+        
+        <div class="main">
+          <h2><?php echo $this->escape($this->title); ?></h2>
+          <div id="main">
+            <?php
+            if(!empty($this->flashMessages)){
+              echo '<div class="flash-messages">';
+
+              //@todo maybe switch to ul?
+              foreach($this->flashMessages as $key=>$value){
+                echo $this->translate($value) . "<br />";
+              }
+              echo '</div>';
+            }
+
+            // content from each view, the rest of this page is global to all views
+            echo $this->layout()->content;
+            ?>
+          </div>
+        </div>
+        <div id="sub">
           <img src="/resources/images/tmp_submenu.png" alt="" />
         </div>
-        <h2><?php echo $this->escape($this->title); ?></h2>
-        <div id="main">
-          <?php
-          if(!empty($this->flashMessages)){
-            echo '<div class="flash-messages">';
-
-            foreach($this->flashMessages as $key=>$value){
-              echo $this->translate($value) . "<br />";
-            }
-            echo '</div>';
-          }
-
-          // content from each view, the rest of this page is global to all views
-          echo $this->layout()->content;
-          ?>
-        </div>
-
 
       </div>
-    <footer>
-footer123    </footer>
+      <footer>
+        <a href="">Impressum</a>
+      </footer>
     </div>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/resources/js/libs/jquery-1.6.2.min.js'); ?>"><\/script>')</script>
@@ -111,9 +116,5 @@ footer123    </footer>
   <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
   <![endif]-->
-  
-  
-
-
 </body>
 </html>
