--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -428,12 +428,27 @@ a:hover {
   background-color: #fefabf;
 }
 
-.document-page .checkbox-column {
-  width: 30px;
-  float: left;
+.document-page .page-line input[type='checkbox'] {
+  margin-left: 0;
   text-align: center;
+  float: left;
+  margin:0;
+  padding:0;
+  width: 15px;
 }
 
+.document-page .page-line {
+  height: 20px
+}
+
+.document-page .page-line label {
+  margin-left: 15px;
+  float: left;
+}
+
+.document-page .page-line.empty label {
+  margin-left: 30px;
+}
 
 /* ==|== non-semantic helper classes ======================================== */
 .ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; }
