--- a/public/resources/css/styles.css
+++ b/public/resources/css/styles.css
@@ -232,15 +232,15 @@ body {
 #header .navigation li:hover > ul { 
   display: block; 
   min-width: 120px;
-  -webkit-border-radius: 5px;
+  -webkit-border-radius: 3px;
   -webkit-border-top-left-radius: 0;
-  -moz-border-radius: 5px;
+  -moz-border-radius: 3px;
   -moz-border-radius-topleft: 0;
-  border-radius: 5px;
+  border-radius: 3px;
   border-top-left-radius: 0;
-  -webkit-box-shadow: 2px 2px 3px #40c0e9;	
-  -moz-box-shadow: 2px 2px 3px #40c0e9;
-  box-shadow: 2px 2px 3px #40c0e9;
+  -webkit-box-shadow: 1px 1px 2px #d9d9d9;	
+  -moz-box-shadow: 1px 1px 2px #d9d9d9;
+  box-shadow: 1px 1px 2px #d9d9d9;
 }
 
 #header .navigation li > ul > li {
