--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -33,3 +33,24 @@
         <?php endif; ?>
       </div>
     </header>
+    <div id="page">
+      <header id="header" class="clearfix">
+        <h1 class="ir">Unplagged - Plagiarism Detection Cockpit</h1>
+        <?php
+        $container = $this->navigation()->getContainer();
+
+        if(Zend_Auth::getInstance()->hasIdentity()){
+          $container->addPage(array(
+            'label'=>'Edit profile',
+            'title'=>'Edit profile',
+            'module'=>'default',
+            'controller'=>'user',
+            'action'=>'edit',
+            'params'=>array(
+              'id'=>$this->defaultNamespace->user->getId()
+            )
+          ));
+        }
+        ?>
+        <?php echo $this->navigation()->menu(); ?>
+      </header>
