--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -479,8 +479,9 @@ a:hover {
 	overflow:auto;
 	font-family:"Courier New",Courier,mono;
 	margin:0;
-	padding:0 0 0 3.1em;
+	padding:0 3.1em;
 }
+
 .document-page ol li {
 	background: white;
 	font-size:small;
