--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -68,6 +68,7 @@ body {
   background-color: #f5f5f5;
   font-family: Helvetica, Arial, Sans-serif;
   color: #323232;
+  min-width: 320px;
 }
 
 #main-header{
