--- a/application/views/scripts/simtext/index.phtml
+++ b/application/views/scripts/simtext/index.phtml
@@ -19,14 +19,26 @@
   </tr>
   <?php 
   $i = 0;
-  foreach($this->listDocuments as $document): 
-    ?>
+  $reportDirectory = "storage" . DIRECTORY_SEPARATOR . "reports" . DIRECTORY_SEPARATOR;
+  $report_name = "test_report.txt";
+ 
+  $report_path = APPLICATION_PATH . DIRECTORY_SEPARATOR . $reportDirectory. "$report_name";
+ 
+  
+ ?>
+ 
+    
   <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
-    <td><a href="/document_page/list/id/<?php echo $document->getId(); ?>"><?php echo $document->getTitle(); ?></a></td>
-    <td><a href="<?php echo "/document/delete/id/" . $document->getId(); ?>"><img class="icon" src="/resources/icons/delete.png" title="<?php echo $this->translate("delete"); ?>" /></a></td>
+    <td><a href="<?php echo $report_path; ?>"><?php echo $report_name;?></a></td>
+    
   </tr>
-  <?php endforeach; ?>
+  
 </table>
+
+<?php
+//$data["content"] = file_get_content($report_path);
+  //$lines = explode('<br />',$content);
+?>
 <p>
 <a href="/simtext/compare"><?php echo $this->translate("Compare"); ?></a>
 </p>
