--- a/application/views/scripts/document/page/list.phtml
+++ b/application/views/scripts/document/page/list.phtml
@@ -18,8 +18,10 @@ Document: <?php echo $this->document->getTitle(); ?>
     <td><a href="/document_page/show/id/<?php echo $page->getId(); ?>"><?php echo $page->getPageNumber(); ?></a></td>
     <td>
           <a href="<?php echo "/document_page/de-hyphen/id/" . $page->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/text_padding_right.png'); ?>" title="<?php echo $this->translate("de-hyphen"); ?>" /></a>
+  <a href="<?php echo "/document_page/stopwords/id/" . $page->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/zoom.png'); ?>" title="<?php echo $this->translate("stopword"); ?>" /></a>
   <a href="<?php echo "/document_page/edit/id/" . $page->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/pencil.png'); ?>" title="<?php echo $this->translate("edit"); ?>" /></a>
-    <a href="<?php echo "/document_page/delete/id/" . $page->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("delete"); ?>" /></a></td>
+    <a href="<?php echo "/document_page/delete/id/" . $page->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("delete"); ?>" /></a>
+    </td>
   </tr>
   <?php endforeach; ?>
 </table>
