--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -13,66 +13,80 @@ $defaultNamespace = new Zend_Session_Namespace('Default');
     <?php echo $this->headMeta(); ?>
     <?php
     echo $this->headLink()
-        ->prependStylesheet($this->baseUrl() . '/resources/css/styles.css');
-    //	->appendStylesheet($this->baseUrl().'/css/navi_de.css')
+        ->prependStylesheet($this->baseUrl() . '/resources/css/styles.css')
+        ->appendStylesheet($this->baseUrl() . '/resources/css/flick/jquery-ui-1.8.17.custom.css');
     ?>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="<?php echo $this->baseUrl('/resources/js/libs/modernizr-2.0.6.min.js'); ?>"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/resources/js/libs/jquery-1.7.1.min.js'); ?>"><\/script>')</script>
+    <script defer src="<?php echo $this->baseUrl('/resources/js/plugins.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/resources/js/script.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/resources/js/libs/jquery-ui-1.8.17.custom.min'); ?>"></script>
+    <!--[if lt IE 7]>
+    <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
+    <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
+    <![endif]-->
   </head>
   <body>
     <header id="main-header">
       <div id="settings-panel">
-        <?php if(Zend_Auth::getInstance()->hasIdentity()): ?>
-          <div id="avatar"><img src="/resources/images/tmp_avatar.png" /></div>
-          <div id="login-actions">
-            <?php echo $this->translate("Welcome") . " " . $defaultNamespace->user->getUsername() . "!"; ?>
-            <a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a>
-          </div>
-          <div id="settings">
-            <img src="/resources/images/tmp_top_icons.png" />
-          </div>
-        <?php else: ?>
-          <div id="login-actions">
-            <?php echo $this->translate("You are not logged in."); ?>
-            <a href="/user/register"><?php echo $this->translate("Register now"); ?></a> 
+        <div class="content">
+          <?php if(Zend_Auth::getInstance()->hasIdentity()): ?>
+            <div id="avatar"><img src="/resources/images/tmp_avatar.png" /></div>
+            <div id="logout-actions">
+              <?php echo $this->translate("Welcome") . " " . $defaultNamespace->user->getUsername() . "!"; ?>
+              <a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a>
+            </div>
+            <div id="settings">
+              <img src="/resources/images/tmp_top_icons.png" />
+            </div>
+          <?php else: ?>
+            <div id="login-actions">
+              <?php echo $this->translate("You are not logged in."); ?>
+              <a href="/user/register"><?php echo $this->translate("Register now"); ?></a> 
               <?php echo $this->translate('or'); ?> <a href="/auth/login"><?php echo $this->translate("Login"); ?></a>
-          </div>
-        <?php endif; ?>
+            </div>
+          <?php endif; ?>
+            <div style="clear: both"></div>
+        </div>
+        <span id="dropdown-button" class="arrow-up"></span>
       </div>
     </header>
-    
+
     <div id="page">
-      
+
       <header id="header" class="clearfix">
         <h1 class="ir">Unplagged - Plagiarism Detection Cockpit</h1>
-        
+
         <?php
 //        var_dump($this->navigation());
         $container = $this->navigation()->getContainer();
-        
-        
+
+
         if(Zend_Auth::getInstance()->hasIdentity()){
           $container->addPage(array(
-            'label' => 'Edit profile',
-            'title' => 'Edit profile',
-            'module' => 'default',
-            'controller' => 'user',
-            'action' => 'edit',
-            'params'     => array(
-              'id' => $defaultNamespace->user->getId()
+            'label'=>'Edit profile',
+            'title'=>'Edit profile',
+            'module'=>'default',
+            'controller'=>'user',
+            'action'=>'edit',
+            'params'=>array(
+              'id'=>$defaultNamespace->user->getId()
             )
           ));
         }
         ?>
-        
+
         <?php echo $this->navigation()->menu(); ?>
       </header>
-      
+
       <div id="content" class="clearfix">
-        
+
         <div class="main">
-          <h2><?php echo $this->escape($this->title); ?></h2>
+
           <div id="main">
+            <h2><?php echo $this->escape($this->title); ?></h2>
             <?php
             if(!empty($this->flashMessages)){
               echo '<div class="flash-messages">';
@@ -89,22 +103,25 @@ $defaultNamespace = new Zend_Session_Namespace('Default');
             ?>
           </div>
         </div>
-        <div id="sub">
-          <img src="/resources/images/tmp_submenu.png" alt="" />
-        </div>
-
+        <nav id="right-nav">
+          <h4>Aktuelles und Kontroverses</h4>
+          <ul>
+            <li><a href="#">News 1<span class="count">3</span></a></li>
+            <li><a href="#">News 1<span class="count">3</span></a></li>
+            <li><a href="#">News 1<span class="count">3</span></a></li>
+          </ul>
+          <br />
+          <h4>Berichte und Mitteilungen</h4>
+          <ul>
+            <li><a href="#">News 1<span class="count">3</span></a></li>
+            <li><a href="#">News 1<span class="count">3</span></a></li>
+            <li><a href="#">News 1<span class="count">3</span></a></li>
+          </ul>
+        </nav>
       </div>
       <footer>
         <a href="">Impressum</a>
       </footer>
     </div>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/resources/js/libs/jquery-1.6.2.min.js'); ?>"><\/script>')</script>
-  <script defer src="<?php echo $this->baseUrl('/resources/js/plugins.js'); ?>"></script>
-  <script defer src="<?php echo $this->baseUrl('/resources/js/script.js'); ?>"></script>
-  <!--[if lt IE 7]>
-  <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-  <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-  <![endif]-->
-</body>
+  </body>
 </html>
